# n8n-workflow-tools

./: .dockerignore  ATTRIBUTION.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
skills/: SKILL.md
src/n8n_workflow_tools/: cli.py  migrator.py
tests/: test_migrator.py
