[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n8n-workflow-tools"
version = "0.1.0"
description = "Migrate hardcoded paths in n8n workflows to config-driven portable format"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["n8n", "workflow", "migration", "path", "config", "automation", "devops"]
authors = [{ name = "Justice E. Chase" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "mypy", "ruff"]

[project.scripts]
n8n-migrate = "n8n_workflow_tools.cli:main"

[project.urls]
Homepage = "https://github.com/justice8096/n8n-workflow-tools"
Repository = "https://github.com/justice8096/n8n-workflow-tools"
Issues = "https://github.com/justice8096/n8n-workflow-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/n8n_workflow_tools"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
